# simpler

./: .gitignore  CMakeLists.txt  README.md  notes.txt
docs/: mainpage.md
src/: CMakeLists.txt  cmdline.l  common.h  configure.c  configure.h  errors.c  errors.h  hash_table.c  hash_table.h  lists.c  lists.h  parser.c  parser.h  parser.y  parser.y.old1  scanner.h  scanner.l  simpler.c  stacks.c  stacks.h
tests/: general1.simp  general2.simp
